add mark entries
