# server/docs/swagger.json
@@ -262,7 +262,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UpdateEntries"
+                            "$ref": "#/definitions/model.UpdateEntriesInput"
                         }
                     }
                 ],
@@ -383,7 +383,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UpdateEntry"
+                            "$ref": "#/definitions/model.UpdateEntryInput"
                         }
                     }
                 ],
@@ -832,7 +832,7 @@
                 }
             }
         },
-        "model.UpdateEntries": {
+        "model.UpdateEntriesInput": {
             "type": "object",
             "properties": {
                 "ids": {
@@ -849,40 +849,8 @@
                 }
             }
         },
-        "model.UpdateEntry": {
-            "type": "object",
-            "properties": {
-                "author": {
-                    "type": "string"
-                },
-                "category": {
-                    "type": "string"
-                },
-                "collectedOn": {
-                    "type": "string"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "feedId": {
-                    "type": "integer"
-                },
-                "isRead": {
-                    "type": "boolean"
-                },
-                "link": {
-                    "$ref": "#/definitions/url.URL"
-                },
-                "originalId": {
-                    "type": "string"
-                },
-                "publishedOn": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
+        "model.UpdateEntryInput": {
+            "type": "object"
         },
         "model.UpdateFeed": {
             "type": "object",
